rubocop/examples/bad/Style_AlignHash.rb
# TODO: Here we check if the keys, separators,
#   and values of a multi-line hash literal are aligned.
